# imageshrink

./: .gitignore  .gitmodules  LICENSE  build.sh  build_arm64.sh  go.mod  go.sum  image_shrink.go  launch.sh
client/: imageshrink.go
common/: ioutils.go  workers.go
cpp/: build.sh  install.sh  main.cpp
docker/: .gitignore  Dockerfile  imageshrink_server  sources.list
go/: Gopkg.toml  go.mod  image_shrink.go
go/imageshrink/: main.go
go/imageshrink-go/: main.go
go/imageshrink-gogm/: main.go
go/imageshrink2/: main.go
go/imageshrink2-server/: main.go
imageshrink/: CMakeLists.txt  build.sh  install.sh  main.cpp  main.go
imageshrink2/imageshrink2_server/: index.html  main.go
server/: imageshrink_server.go  server.go
